--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ maintainers = [
 ]
 license = 'BSD-2-Clause'
 description = 'Sphinx "adadomain" extension'
+readme = 'README.rst'
 classifiers=[
     'Development Status :: 4 - Beta',
     'Environment :: Console',
